--- a/src/less/index.less
+++ b/src/less/index.less
@@ -270,6 +270,7 @@
 .translator-cover {
     position: relative;
     margin-bottom: 50px;
+    background-color: rgb(166, 208, 122);
     .translator-info {
         position: absolute;
         bottom: 0;
