--- a/src/less/index.less
+++ b/src/less/index.less
@@ -295,6 +295,17 @@
         border-radius: 100%;
         -webkit-border-radius: 100%;
         overflow: hidden;
+        background-color: white;
+    }
+    .translator-bg {
+        display: block;
+        height: 158px;
+        line-height: 158px;
+        overflow: hidden;
+        text-align: center;
+        img {
+            max-width: 100%;
+        }
     }
 }
 
