--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -5,6 +5,7 @@
 @brand-danger: #ff3b30;
 @brand-info: #59a7da;
 @gray-ligher:#eeeeee;
+@switch-handle-diameter:16px;
 // Bootstrap Overrides
 @state-warning-bg:@brand-warning;
 @state-warning-text:white;
