--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -2,74 +2,140 @@
 <div ui-content-for="title">申请人列表</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
-	<span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
+    <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
 </div>
 <div class="scrollable">
-	<div class="scrollable-content">
-		<div class="recommands">
-			<div class="recommand">
-				<div class="recommand-header">
-					Angel Mo <i class="kk kk-icon kk-female"></i>
-				</div>
-				<div class="recommand-body">
-					<div>语种：中文(母语)/韩语(流利)</div>
-					<p>所在地：韩国首尔</p>
-					<p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
-					<div class="clearfix">
-						<div class="pull-left">
-							<span class="kk kk-like-1"></span>
-						</div>
-						<div class="pull-right">
-							<span class="kk kk-apply-1"></span>
-						</div>
-					</div>
-				</div>
-				<div class="recommand-avatar">
-					<img ng-src="../images/avatar_1.png" alt="">
-				</div>
-			</div>
-			<div class="recommand">
-				<div class="recommand-header">
-					Angel Mo <i class="kk kk-icon kk-female"></i>
-				</div>
-				<div class="recommand-body">
-					<div>语种：中文(母语)/韩语(流利)</div>
-					<p>所在地：韩国首尔</p>
-					<p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
-					<div class="clearfix">
-						<div class="pull-left">
-							<span class="kk kk-like-2"></span>
-						</div>
-						<div class="pull-right">
-							<span class="kk kk-apply-2"></span>
-						</div>
-					</div>
-				</div>
-				<div class="recommand-avatar">
-					<img ng-src="../images/avatar_1.png" alt="">
-				</div>
-			</div>
-			<div class="recommand">
-				<div class="recommand-header">
-					Angel Mo <i class="kk kk-icon kk-female"></i>
-				</div>
-				<div class="recommand-body">
-					<div>语种：中文(母语)/韩语(流利)</div>
-					<p>所在地：韩国首尔</p>
-					<p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
-					<div class="clearfix">
-						<div class="pull-left">
-							<span class="kk kk-like-1"></span>
-						</div>
-						<div class="pull-right">
-							<span class="kk kk-apply-3"></span>
-						</div>
-					</div>
-				</div>
-				<div class="recommand-avatar">
-					<img ng-src="../images/avatar_1.png" alt="">
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="scrollable-content">
+        <div class="recommands">
+            <div class="recommand">
+                <div class="recommand-header">
+                    Angel Mo <i class="kk kk-icon kk-female"></i>
+                </div>
+                <div class="recommand-body">
+                    <div>语种：中文(母语)/韩语(流利)</div>
+                    <p>所在地：韩国首尔</p>
+                    <p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
+                    <div class="clearfix">
+                        <div class="pull-left">
+                            <span class="kk kk-like-1"></span>
+                        </div>
+                        <div class="pull-right">
+                            <span class="kk kk-apply-1"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="recommand-avatar">
+                    <img ng-src="../images/avatar_1.png" alt="">
+                </div>
+            </div>
+            <div class="recommand">
+                <div class="recommand-header">
+                    Angel Mo <i class="kk kk-icon kk-female"></i>
+                </div>
+                <div class="recommand-body">
+                    <div>语种：中文(母语)/韩语(流利)</div>
+                    <p>所在地：韩国首尔</p>
+                    <p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
+                    <div class="clearfix">
+                        <div class="pull-left">
+                            <span class="kk kk-like-2"></span>
+                        </div>
+                        <div class="pull-right">
+                            <span class="kk kk-apply-2"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="recommand-avatar">
+                    <img ng-src="../images/avatar_1.png" alt="">
+                </div>
+            </div>
+            <div class="recommand">
+                <div class="recommand-header">
+                    Angel Mo <i class="kk kk-icon kk-female"></i>
+                </div>
+                <div class="recommand-body">
+                    <div>语种：中文(母语)/韩语(流利)</div>
+                    <p>所在地：韩国首尔</p>
+                    <p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
+                    <div class="clearfix">
+                        <div class="pull-left">
+                            <span class="kk kk-like-1"></span>
+                        </div>
+                        <div class="pull-right" ui-turn-on="payment_panel">
+                            <span class="kk kk-apply-3"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="recommand-avatar">
+                    <img ng-src="../images/avatar_1.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div ui-content-for="modals">
+    <div class="modal modal-overlay" ui-if="payment_panel" ui-state='payment_panel'>
+        <form name="editForm" ng-submit="ajaxForm()" class="modal-dialog" style="margin:0">
+            <div class="modal-content">
+                <div class="modal-header bg-primary clearfix">
+                    <div class="pull-left section section-condensed bg-transparent" ui-turn-off="payment_panel">
+                        <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
+                    </div>
+                    <h4 class="modal-title text-center">申请悠译人</h4>
+                    <div class="section bg-transparent text-center">
+                        <p>将要支付</p>
+                        <span class="text-very-large">500</span>元
+                    </div>
+                </div>
+                <div class="modal-body" style="padding:0;">
+                    <div class="section">
+                        <div class="media">
+                            <div class="media-left">
+                                <div style="height:64px;width:64px">
+                                    <img class="media-object" ng-src="../images/avatar.png" alt="">
+                                </div>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading text-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam iste odit, libero placeat veritatis velit laborum deleniti est at corporis perspiciatis illo expedita rerum sed unde doloribus cupiditate modi atque.</h4>
+                                <div>语种：中文(母语)/韩文(流利)</div>
+                                <div>所在地：韩国首尔</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section large bg-gray-lighter text-primary clearfix">
+                        余额支付
+                        <span class="pull-right">
+                    		<ui-switch  ng-model="invoice.paid"></ui-switch>
+                    	</span>
+                    </div>
+                    <div class="section large">
+                        当前可用余额50.0
+                    </div>
+                    <div class="section large bg-gray-lighter text-primary clearfix">
+                        余额支付
+                        <span class="pull-right">
+                    		<ui-switch  ng-model="!invoice.paid"></ui-switch>
+                    	</span>
+                    </div>
+                    <div class="list-group">
+                        <div class="list-group-item">
+                            <span class="list-group-item-text">银联支付方式</span>
+                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':input.price.by_day !=''}"></i>
+                        </div>
+                        <div class="list-group-item">
+                            <span class="list-group-item-text">微信支付</span>
+                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':input.price.by_day !=''}"></i>
+                        </div>
+                        <div class="list-group-item">
+                            <span class="list-group-item-text">支付宝支付</span>
+                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':input.price.by_day !=''}"></i>
+                        </div>
+                    </div>
+                    <div class="section text-center">
+                        <button type="submit" class="btn btn-primary" ng-disabled="editForm.edit.$invalid">确认并支付</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
