--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -114,7 +114,7 @@
                     <div class="section large bg-gray-lighter text-primary clearfix">
                         余额支付
                         <span class="pull-right">
-                    		<ui-switch  ng-model="!invoice.paid"></ui-switch>
+                    		<ui-switch  ng-model="invoice.paid"></ui-switch>
                     	</span>
                     </div>
                     <div class="list-group">
