--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -153,7 +153,7 @@
         <div class="avatar avatar-large">
             <img ng-src="../images/avatar_1.png" alt="">
         </div>
-        <a ng-href="#/me_info" class="block text-large text-gray">姚逢临<i class="kk kk-icon kk-edit" style="position:relative;top:-3px"></i></a>
+        <a ng-href="#/me_info" class="block text-large text-gray">{{user.name || user.nickname || user.telephone || user.email }}<i class="kk kk-icon kk-edit" style="position:relative;top:-3px"></i></a>
         <div>英文/中文/西班牙语/广东话</div>
         <p></p>
     </div>
