--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -59,10 +59,10 @@
                     </div>
                 </div>
                 <div class="section section-wide bg-gray-lighter task_cost text-ellipsis">
-                    {{task.currency_type}} {{task.total_money}}/天 (约{{task.to_currency_type}} {{task.total_money}}/天)
+                    {{task.currency_type}} {{task.price_for_day}}/天 (约{{task.to_currency_type}} {{task.to_price_for_day}}/天)
                 </div>
                 <div class="task_day section-wide bg-gray-lighter text-ellipsis">
-                    {{timeFormater(task.start_time)}}——{{timeFormater(task.end_time)}}
+                    {{task.start_time}}——{{task.end_time}}
                 </div>
                 <div class="task_detail section-wide bg-gray-lighter text-ellipsis">
                     详细要求：{{task.description}}
